--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsc -w",
-    "start": "http-server ./public"
+    "start": "http-server ./docs"
   },
   "keywords": [],
   "author": "",
