--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsc -w",
-    "start": "http-server ./docs"
+    "dev": "webpack --mode development --watch",
+    "start": "http-server ./docs",
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +15,10 @@
   "devDependencies": {
     "@types/node": "^12.7.7",
     "typescript": "^3.6.3"
+  },
+  "dependencies": {
+    "ts-loader": "^6.1.2",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9"
   }
 }
