--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -3,12 +3,12 @@
   "short_name": "Rico",
   "icons": [
     {
-      "src": "/favicon-192x192.png",
+      "src": "favicon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     }
   ],
-  "start_url": "/index.html",
+  "start_url": "index.html",
   "display": "fullscreen",
   "background_color": "#000000",
   "theme_color": "#9ab9ce"
