--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -6,6 +6,11 @@
       "src": "favicon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
+    },
+    {
+      "src": "favicon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
   "start_url": "index.html",
