--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -5,7 +5,8 @@
     {
       "src": "favicon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "favicon-512x512.png",
