--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -17,5 +17,5 @@
   "start_url": "index.html",
   "display": "fullscreen",
   "background_color": "#000000",
-  "theme_color": "#9ab9ce"
+  "theme_color": "#303000"
 }
