--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^3.9.6"
   },
   "dependencies": {
+    "canvas": "^2.6.1",
     "ts-loader": "^7.0.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
