--- a/package.json
+++ b/package.json
@@ -15,18 +15,17 @@
   "license": "ISC",
   "devDependencies": {
     "@types/chai": "^4.2.17",
-    "@types/expect": "^24.3.0",
-    "@types/mocha": "^8.2.2",
-    "@types/node": "^14.14.43",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^16.0.43",
     "chai": "^4.3.4",
-    "mocha": "^8.3.2",
-    "ts-mocha": "^8.0.0",
-    "typescript": "^3.9.9"
+    "http-server": "^14.1.0",
+    "mocha": "^9.2",
+    "ts-mocha": "^9.0.0",
+    "typescript": "^4.6.3"
   },
   "dependencies": {
-    "canvas": "^2.7.0",
-    "ts-loader": "^8.2.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^4.6.0"
+    "ts-loader": "^9.2.0",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.0"
   }
 }
